--- a/test-output/old/Mira Safety Application Automation Test/classes.html
+++ b/test-output/old/Mira Safety Application Automation Test/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateFooterTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyMyAccountPageTitletest</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -24,6 +28,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyAccountDetailsTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyContactsLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -61,11 +69,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>MSLogoTest</td>
+<td>validateNewsLetterTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateMenuTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MSLogoTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validatecustomerServicesTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateInformationTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
