--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerServiceTest.ValidateCustomerSection()[pri:3, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">ValidateCustomerSection</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:34</td>   <td>-18702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerServiceTest.clickOnShippingTest()[pri:2, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">clickOnShippingTest</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:03:55</td>   <td>-57730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CustomerServiceTest.setUp()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:17</td>   <td>-36209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CustomerServiceTest.setUp()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:35</td>   <td>-17995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CustomerServiceTest.setUp()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:16</td>   <td>-36943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CustomerServiceTest.tearDown()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:34</td>   <td>-18697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CustomerServiceTest.tearDown()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:53</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CustomerServiceTest.tearDown()[pri:0, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/27 23:04:16</td>   <td>-37277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerServiceTest.validateTitle()[pri:1, instance:com.MS.qa.testcases.CustomerServiceTest@61832929]">validateTitle</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/05/30 21:45:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductTest.ProductpageTtitleTest()[pri:0, instance:com.MS.qa.testcases.ProductTest@5b275dab]">ProductpageTtitleTest</td> 
+  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/05/30 21:43:51</td>   <td>-81426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductTest.setup()[pri:0, instance:com.MS.qa.testcases.ProductTest@5b275dab]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
 </table>
