--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/05/30 21:43:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductTest.setup()[pri:0, instance:com.MS.qa.testcases.ProductTest@5b275dab]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/30 21:45:12</td>   <td>81426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductTest.ProductpageTtitleTest()[pri:0, instance:com.MS.qa.testcases.ProductTest@5b275dab]">ProductpageTtitleTest</td> 
-  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>19/06/01 16:49:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductTest.setUp()[pri:0, instance:com.MS.qa.testcases.ProductTest@1a968a59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>19/06/01 16:49:23</td>   <td>22125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductTest.checkOutProduct()[pri:0, instance:com.MS.qa.testcases.ProductTest@1a968a59]">checkOutProduct</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>19/06/01 16:49:23</td>   <td>22140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductTest.tearDown()[pri:0, instance:com.MS.qa.testcases.ProductTest@1a968a59]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
 </table>
