--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:04:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutTest.setUp()[pri:0, instance:com.MS.qa.testcases.AboutTest@61832929]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:05:01</td>   <td>23559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutTest.setUp()[pri:0, instance:com.MS.qa.testcases.AboutTest@61832929]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:05:00</td>   <td>22879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutTest.tearDown()[pri:0, instance:com.MS.qa.testcases.AboutTest@61832929]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:05:25</td>   <td>47426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutTest.tearDown()[pri:0, instance:com.MS.qa.testcases.AboutTest@61832929]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:05:25</td>   <td>47421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutTest.validateAboutPageSectionTest()[pri:2, instance:com.MS.qa.testcases.AboutTest@61832929]">validateAboutPageSectionTest</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/05/26 18:05:00</td>   <td>22784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutTest.validateAboutPageTitleTest()[pri:1, instance:com.MS.qa.testcases.AboutTest@61832929]">validateAboutPageTitleTest</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="8675e1">  <td>19/06/04 11:02:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateQty.CalculateQtyPerPrice()[pri:0, instance:com.MS.qa.testcases.CalculateQty@5906ebcb]">CalculateQtyPerPrice</td> 
+  <td>main@1625082366</td>   <td></td> </tr>
+<tr bgcolor="8675e1">  <td>19/06/04 11:01:54</td>   <td>-17418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CalculateQty.setup()[pri:0, instance:com.MS.qa.testcases.CalculateQty@5906ebcb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1625082366</td>   <td></td> </tr>
 </table>
